# Decoupled-Dispatch

./: .gitignore  LICENSE  eventbroker.h  meson.build  observer.cpp  readme.md
example/readme/: callbackevent.cpp  demo1.cpp  inheritance.cpp  meson.build  overloaded.cpp  variantdemo.cpp  visit.cpp  voidptr.cpp
example/simple/: event1.h  event2.h  event3.h  main.cpp  meson.build  module1.h  module2.h
script/: benchmark.sh
src/: dispatch.h  polycontainer.h  polyvector.h
src/wip/: eventbroker.h  polyvectordispatch.h
test/: baseline.h  benchmark.cpp  eventpp.cpp  inheritance.cpp  inheritance.h  main.cpp  meson.build  polyarray.cpp  polyarray.h  polyvec.cpp  polyvec.h  variant.cpp  variantbenchmark.h  voidptr.h
test/common/: allocationcount.h  generator.h  generator2.h  generator3.h  measure.h  module.h
test/decoupled/: event.h
test/event/: derivedevent.h  event.h
test/inherited/: event.h
test/old/: baseline.cpp  eventpp.cpp  generator.h  inheritance.cpp  polyarray.cpp  polyvec.cpp  variant.cpp
