
deps = [dep, dependency('fmt')]
exe = executable('demo1', 'demo1.cpp',
  dependencies: deps
)

executable('callbackevent', 'callbackevent.cpp',
  dependencies: deps
)

executable('inheritance', 'inheritance.cpp', dependencies: deps)
executable('voidptr', 'voidptr.cpp', dependencies: deps)
executable('variantdemo', 'variantdemo.cpp', dependencies: deps)
executable('visit', 'visit.cpp', dependencies: deps)
executable('overloaded', 'overloaded.cpp', dependencies: deps)
